bug: contact component overlays on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,10 @@ section {
     margin-bottom: 15rem;
   }
 
+  #projects {
+    margin-bottom: 15rem;
+  }
+
   #contact {
     margin-top: 55rem;
   }
